# V-rify-IA

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
app/: config.py  engine.py  kernel.py  ledger.py  logging_config.py  main.py  models.py  orchestrator.py
docs/: api.md  proofs.md  security.md
examples/: curl_example.sh  langchain_tool.py  node_example.js  python_example.py
sios/: __init__.py  pyproject.toml
sios/agents/: base.py  coding_agent.py  data_agent.py  math_agent.py
sios/api/: main.py
sios/config/: settings.py
sios/core/: memory.py  orchestrator.py
sios/models/: llm.py
sios/sandbox/: runner.py
sios/ui/: app.py
tests/: conftest.py  test_benchmarks.py  test_engine.py  test_gateway.py  test_kernel.py  test_ledger.py  test_orchestrator.py
tests/sios/: test_api.py  test_orchestrator.py  test_sandbox.py
verity/: __init__.py  client.py
